--- a/css/style.css
+++ b/css/style.css
@@ -1253,9 +1253,9 @@
     display: -ms-flexbox;
     display: flex;
     width: 620px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
@@ -1286,12 +1286,12 @@
   .navigation__nav-item {
     padding-top: 45px;
     padding-bottom: 43px;
-    padding-right: 79px;
+    margin-right: 79px;
     background-color: transparent;
     border: none;
   }
   .navigation__nav-item:nth-child(4) {
-    padding-right: 0;
+    margin-right: 0;
   }
   .navigation__nav-link {
     position: relative;
@@ -1578,15 +1578,16 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: auto;
+    width: 2870px;
     margin-bottom: 15px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   .reviews__item {
-    display: none;
-    width: 820px;
+    width: 960px;
+    padding-left: 70px;
+    padding-right: 70px;
   }
   .reviews__item--active {
     display: -webkit-box;
